fix: spacing too small

--- a/day18-shopcmd/css/utility.css
+++ b/day18-shopcmd/css/utility.css
@@ -20,7 +20,7 @@
   line-height: 24px;
 }
 
-.mt24 {
+.mt46 {
   margin-top: 24px;
 }
 
